infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: expiration-depl
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: expiration
  template:  
    metadata:
      labels:
        app: expiration 
    spec:
      containers: 
        - name: expiration
          image: marianosegura/expiration
          env:  # access jwt key secret 
            - name: NATS_URL
              value: 'http://nats-srv:4222'
            - name: NATS_CLUSTER_ID
              value: ticketing
            - name: NATS_CLIENT_ID  
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name  # pod name
            - name: REDIS_HOST
              value: expiration-redis-srv
