infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: auth-depl
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: auth
  template:  
    metadata:
      labels:
        app: auth 
    spec:
      containers: 
        - name: auth
          image: marianosegura/auth
          env:  # access jwt key secret 
            - name: JWT_KEY
              valueFrom:
                secretKeyRef:
                  name: jwt-secret
                  key: JWT_KEY  
---
apiVersion: v1
kind: Service
metadata: 
  name: auth-srv
spec: 
  type: ClusterIP 
  selector: 
    app: auth 
  ports: 
    - name: auth
      protocol: TCP
      port: 3000  # machine
      targetPort: 3000  # pod
