infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args: [
            '-p', '4222',  # client port
            '-m', '8222',  # http port (for monitoring)
            '-hbi', '5s',  # heartbeat interval to clients
            '-hbt', '5s',  # heartbeat timeout, how long to wait for client response
            '-hbf', '2',  # heartbeat fail count, how many failed before closing client connection
            '-SD',  # enable Standard Debugging output
            '-cid', 'ticketing'  # cluster id 
          ]
---
apiVersion: v1
kind: Service
metadata: 
  name: nats-srv
spec: 
  type: ClusterIP 
  selector: 
    app: nats 
  ports: 
    - name: client
      protocol: TCP
      port: 4222 
      targetPort: 4222 
    - name: monitoring
      protocol: TCP
      port: 8222 
      targetPort: 8222
