infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: orders-depl
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: orders
  template:  
    metadata:
      labels:
        app: orders 
    spec:
      containers: 
        - name: orders
          image: marianosegura/orders
          env:  # access jwt key secret 
            - name: JWT_KEY
              valueFrom:
                secretKeyRef:
                  name: jwt-secret
                  key: JWT_KEY  
            - name: MONGO_URI
              value: 'mongodb://orders-mongo-srv:27017/orders'
            - name: NATS_URL
              value: 'http://nats-srv:4222'
            - name: NATS_CLUSTER_ID
              value: ticketing
            - name: NATS_CLIENT_ID  
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name  # pod name
---
apiVersion: v1
kind: Service
metadata: 
  name: orders-srv
spec: 
  type: ClusterIP 
  selector: 
    app: orders 
  ports: 
    - name: orders
      protocol: TCP
      port: 3000  # machine
      targetPort: 3000  # pod
