infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: payments-depl
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: payments
  template:  
    metadata:
      labels:
        app: payments 
    spec:
      containers: 
        - name: payments
          image: marianosegura/payments
          env:  # access jwt key secret 
            - name: JWT_KEY
              valueFrom:
                secretKeyRef:
                  name: jwt-secret
                  key: JWT_KEY  
            - name: STRIPE_KEY
              valueFrom:
                secretKeyRef:
                  name: stripe-secret
                  key: STRIPE_KEY  
            - name: MONGO_URI
              value: 'mongodb://payments-mongo-srv:27017/payments'
            - name: NATS_URL
              value: 'http://nats-srv:4222'
            - name: NATS_CLUSTER_ID
              value: ticketing
            - name: NATS_CLIENT_ID  
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name  # pod name
---
apiVersion: v1
kind: Service
metadata: 
  name: payments-srv
spec: 
  type: ClusterIP 
  selector: 
    app: payments 
  ports: 
    - name: payments
      protocol: TCP
      port: 3000  # machine
      targetPort: 3000  # pod
