infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: tickets-depl
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: tickets
  template:  
    metadata:
      labels:
        app: tickets 
    spec:
      containers: 
        - name: tickets
          image: marianosegura/tickets
          env:  # access jwt key secret 
            - name: JWT_KEY
              valueFrom:
                secretKeyRef:
                  name: jwt-secret
                  key: JWT_KEY  
            - name: MONGO_URI
              value: 'mongodb://tickets-mongo-srv:27017/tickets'
            - name: NATS_URL
              value: 'http://nats-srv:4222'
            - name: NATS_CLUSTER_ID
              value: ticketing
            - name: NATS_CLIENT_ID  
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name  # pod name
---
apiVersion: v1
kind: Service
metadata: 
  name: tickets-srv
spec: 
  type: ClusterIP 
  selector: 
    app: tickets 
  ports: 
    - name: tickets
      protocol: TCP
      port: 3000  # machine
      targetPort: 3000  # pod
